# meta

./: .clang-format  .clangd  CMakeLists.txt  README.md  meta.hpp  span.hpp
test/: main.cpp  test.cpp  test.h
